feat: AI가 아이 관심사 자동 추출 및 DB에 저장